# xsnap

./: .dockerignore  Cargo.toml  Dockerfile  MIGRATION.md  PLAN.md  README.md  cliff.toml  install.sh  xsnap.schema.json  xsnap.test.schema.json
.githooks/: commit-msg  pre-commit
.github/workflows/: e2e.yml  release.yml
docs/plans/: 2026-03-03-xsnap-design.md  2026-03-03-xsnap-implementation.md
e2e/: README.md
e2e/storybook-basic/: docker-compose.yml  run.sh
e2e/storybook-basic/app/: Dockerfile  package.json
e2e/storybook-basic/app/src/components/: Badge.stories.tsx  Badge.tsx  Button.stories.tsx  Button.tsx  Card.stories.tsx  Card.tsx
e2e/storybook-basic/xsnap/: xsnap.config.jsonc
e2e/storybook-basic/xsnap/__snapshots__/: .gitignore
e2e/storybook-basic/xsnap/tests/: badge.xsnap.jsonc  button.xsnap.jsonc  card.xsnap.jsonc
src/: error.rs  lib.rs  main.rs
src/browser/: actions.rs  download.rs  mod.rs  pool.rs
src/commands/: approve.rs  cleanup.rs  init.rs  migrate.rs  mod.rs  test.rs
src/config/: global.rs  mod.rs  schema.rs  test.rs  types.rs  validate.rs
src/diff/: compare.rs  composite.rs  mod.rs
src/runner/: child_process.rs  executor.rs  mod.rs  result.rs
src/ui/: mod.rs  pipeline.rs  tui.rs
tests/: browser_download_test.rs  config_global_test.rs  config_schema_test.rs  config_test_loading_test.rs  config_types_test.rs  config_validate_test.rs  diff_test.rs  ui_pipeline_test.rs
