[package]
name = "xsnap"
version = "0.1.0"
edition = "2024"
description = "Visual regression testing tool"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json_comments = "0.2"

# JSON Schema
schemars = "1"

# Browser automation
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Image processing
image = "0.25"
image-compare = "0.4"

# Terminal UI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Pipeline mode
indicatif = "0.17"

# File patterns
glob = "0.3"

# Interactive prompts (migration)
dialoguer = "0.11"

# HTTP (Chromium download)
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }

# YAML (migration from OSnap)
serde_yaml = "0.9"

# Errors
thiserror = "2"
anyhow = "1"

# Misc
num_cpus = "1"
zip = "2"       # Chromium archive extraction
dirs = "6"      # Platform cache directories

[dev-dependencies]
tempfile = "3"
assert_fs = "1"
