[package]
name = "xsnap"
version = "0.1.8"
edition = "2024"
description = "Visual regression testing tool"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json_comments = "0.2"

# JSON Schema
schemars = "1"

# Browser automation
chromiumoxide = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Image processing
image = "0.25"
image-compare = "0.5"

# Terminal UI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"

# Pipeline mode
indicatif = "0.18"

# File patterns
glob = "0.3"

# Interactive prompts (migration)
dialoguer = "0.12"

# HTTP (Chromium download)
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls"] }

# YAML (migration from OSnap)
serde_yaml = "0.9"

# Regex (OSnap filename parsing)
regex = "1"

# Errors
thiserror = "2"
anyhow = "1"

# Process group management (Unix)
libc = "0.2"

# Misc
zip = "8"       # Chromium archive extraction
dirs = "6"      # Platform cache directories

[dev-dependencies]
tempfile = "3"
assert_fs = "1"
